--- a/CustomRenderPipeline/Packages/manifest.json
+++ b/CustomRenderPipeline/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.3",
+    "com.unity.render-pipelines.core": "7.1.7",
     "com.unity.render-pipelines.universal": "7.1.6",
     "com.unity.test-framework": "1.1.3",
     "com.unity.ugui": "1.0.0",
